--- a/index_portofolio.html
+++ b/index_portofolio.html
@@ -40,6 +40,8 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
 
+                
+
                 <!--taile d'une image carousel 600 x 399.95 -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -65,6 +67,7 @@
                 </a>
 
             </div>
+            <img src="image/Banner_portfolio.jpg" alt="" class="banner">
 
 
             <img id="cloud_2" src="cloud/cloud_PNG0.png" alt="">
@@ -231,9 +234,11 @@
         <p class="txt_scroll_1">Scroll up,<br> to see more..</p>
         <!-- nav bar -->
         <div class="menu">
-            <p id="welcome" href=""> Welcome </p>
-            <p id="parcours"> Formations - Expériences </p>
-
+            <p id="welcome">Welcome</p>
+            <p id="parcours">Formations</p>
+            <p id="exp">Expériences</p>
+            <p id="competences">Competences</p>
+            <p id="prjs">Projets</p>
         </div>
 
 
@@ -248,5 +253,4 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="script_portofolio.js"></script>
 </body>
-fdgngdf
 </html>
