--- a/index_portofolio.html
+++ b/index_portofolio.html
@@ -248,5 +248,5 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="script_portofolio.js"></script>
 </body>
-
+fdgngdf
 </html>
