--- a/index_portofolio.html
+++ b/index_portofolio.html
@@ -40,7 +40,7 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
 
-                
+
 
                 <!--taile d'une image carousel 600 x 399.95 -->
                 <div class="carousel-inner">
@@ -67,13 +67,16 @@
                 </a>
 
             </div>
-            <img src="image/Banner_portfolio.jpg" alt="" class="banner">
+
+
+            <!--<img src="image/Banner_portfolio.jpg" alt="" class="banner">-->
+            <button type="button" id="button_5" class="btn btn-outline-secondary"> Compétences </button>
+            <button type="button" id="button_6" class="btn btn-outline-secondary"> Loisirs </button>
 
 
             <img id="cloud_2" src="cloud/cloud_PNG0.png" alt="">
             <!-- DEVELOPPEUR WEB -->
             <div id="formation_4">
-                <img src="image/steve-halama-Yhc7YGZlz3g-unsplash.jpg" alt="">
                 <div class="text_6">
                     <h4 class="intitule"> CCI - Nouméa, Nouvelle-Calédonie</h4>
                     <h5 class="intitule"> FORMATION <br> DEVELOPPEUR WEB</h5>
@@ -82,7 +85,9 @@
                 </div>
             </div>
 
+
             <img id="cloud_1_1" src="cloud/cloud_PNG0.png" alt="">
+
             <!-- Dessinatrice projeteur -->
             <div id="experience_5">
                 <div class="info">
@@ -97,18 +102,17 @@
                         </div>
                     </div>
                 </div>
-                <img id="dessinateur" src="image/ryan-ancill-shulman-0w1MiTY78h0-unsplash.jpg" alt="">
             </div>
 
             <!--Job d'ete + macdo + LPEC -->
-
             <img id="cloud_1" src="cloud/cloud_PNG0.png" alt="">
 
             <div id="row_1" class="row">
+
+                <img id="cloud_5" src="cloud/cloud_PNG19.png" alt="">
                 <article class="col-md-4">
 
                     <div id="formation_3">
-                        <img src="image/priscilla-du-preez-s5KT5CS1zbA-unsplash.jpg" alt="">
                         <div class="text_3">
                             <h4 class="intitule"> Licence Professionnelle Environnement et Construction</h4>
                             <h5 class="place"> IUT La Rochelle, la Rochelle - France</h5>
@@ -169,13 +173,11 @@
 
             <!-- BTS Batiment + stage GINGER LBTP -->
             <div class="formation_2">
-
                 <div class="info">
-
                     <div id="bts_batiment">
-                        <div class="text">
+                        <div class="text_1_1">
                             <h4 class="intitule"> BTS Bâtiment</h4>
-                            <h5 class="place"> Lycée Jules Garnier, Nouméa Nouvelle-Calédonie</h5>
+                            <h5 class="place"> Lycée Jules Garnier <br> Nouméa Nouvelle-Calédonie</h5>
                             <h6 class="year">FEVRIER 2015 - DECEMBRE 2016</h6>
                             <button type="button" id="button_1" class="btn btn-outline-secondary"> + </button>
                         </div>
@@ -193,20 +195,20 @@
                     </div>
 
                 </div>
-                <img src="image/marjanblan-0bzYFCQcljg-unsplash.jpg" alt="">
             </div>
 
             <img id="cloud_1_2" src="cloud/cloud_PNG0.png" alt="">
 
             <!-- BAC STI2D -->
+
             <div id="formation_1">
-                <img src="image/chris-liverani-rD2dc_2S3i0-unsplash.jpg" alt="">
                 <div class="text">
-                    <h4 class="intitule"> BAC STI2D (...)</h4>
+                    <h4 class="intitule"> BAC STI2D </h4>
                     <h5 class="place"> Lycée Jules Garnier Nouméa, Nouvelle-Calédonie</h5>
-                    <h6 class="year">JANVIER 2014 <br> DECEMBRE 2014</h6>
+                    <h6 class="year">JANVIER 2014 - DECEMBRE 2014</h6>
                 </div>
             </div>
+            <img id="cloud_6" src="cloud/cloud_PNG31.png" alt="">
 
             <img id="cloud_1_3" src="cloud/cloud_PNG7.png" alt="">
             <!-- HOME PAGE -->
@@ -253,4 +255,5 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="script_portofolio.js"></script>
 </body>
+
 </html>
