--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,61 +27,88 @@
     <img id="cloud_3" src="cloud/cloud_PNG4.png" alt="">
     <div class="vl"></div>
 
-    <div class="navBar">
-        <nav class="coordonnees">
-            <a class="crdn" href="mailto:t.malekalita@gmail.com">Email </i></a>
-            <a class="crdn" href="tel:+687863521">Phone </i></a>
-            <a class="crdn" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b" target="_blank">Linkedin
-                </i></a>
-            <a class="crdn" href="https://github.com/Maleka2729" target="_blank">Github </i></a>
-        </nav>
+    <div class="nav_main">
+        <div class="navBar">
+            <nav class="coordonnees">
+                <a id="crdn" href="mailto:t.malekalita@gmail.com">Email </a>
+                <a id="phone" href="tel:+687863521">Phone</a>
+                <a id="lkd" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b" target="_blank">Linkedin
+                </a>
+                <a id="git" href="https://github.com/Maleka2729" target="_blank">Github</a>
+            </nav>
+        </div>
+
+        <div class="navigation">
+            <a href="#welcome" id="wlm"> Welcome</a>
+            <a href="#parcours" id="pcr">Parcours</a>
+            <a href="#competences" id="cpt">Competences</a>
+        </div>
     </div>
 
     <div class="container-fluid">
         <div class="container">
 
-            <div id="carouselExampleIndicators" class="carousel slide" style="width: 600px; margin: 0 auto"
-                data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-
-
-
-                <!--taile d'une image carousel 600 x 399.95 -->
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="image/Publicite Eponge.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="image/formulaire_freeCodeCamps.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="image/norman_borlaug.jpg" class="d-block w-100" alt="...">
+            <div class="menu">
+                <input type="checkbox" id="toggle" />
+                <label id="show-menu" for="toggle">
+                    <div class="btn_1">
+                        <img src="icones/brain.png" class="material-icons md-36 toggleBtn menuBtn">
+                        <img src="icones/cancel_close_delete_exit_logout_remove_x_icon_123217.png"
+                            class="material-icons md-36 toggleBtn closeBtn">
                     </div>
 
-                </div>
-
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-
+                    <div class="btn_1">
+                        <img src="icones/Autocad_23637.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/Revit_23612.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/rafagagooglesketchup_11285.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/Office_2013_23572.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/file_type_css_icon_130661.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/file_type_html_icon_130541.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/file_type_js_official_icon_130509.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_1">
+                        <img src="icones/file_type_python_icon_130221.png" class="material-icons md-36">
+                    </div>
+                </label>
             </div>
 
+            <div class="menu_1_2">
+                <input type="checkbox" id="toggle_2" />
+                <label id="show-menu_2" for="toggle_2">
+                    <div class="btn_2">
+                        <img src="icones/happy_smiley_icon-icons.com_49910.png"
+                            class="material-icons md-36 toggleBtn menuBtn_2">
+                        <img src="icones/cancel_close_delete_exit_logout_remove_x_icon_123217.png"
+                            class="material-icons md-36 toggleBtn closeBtn_2">
+                    </div>
 
-            <!--<img src="image/Banner_portfolio.jpg" alt="" class="banner">-->
-            <button type="button" id="button_5" class="btn btn-outline-secondary"> Compétences </button>
-            
-            <button type="button" id="button_6" class="btn btn-outline-secondary"> Loisirs </button>
-            
+                    <div class="btn_2">
+                        <img src="icones/free-30-instagram-stories-icons03_122550.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_2">
+                        <img src="icones/mp3musicplayer_114495.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_2">
+                        <img src="icones/pink_camera_icon-icons.com_56621.png" class="material-icons md-36">
+                    </div>
+                    <div class="btn_2">
+                        <img src="icones/read_book_study_icon-icons.com_51077.png" class="material-icons md-36">
+                    </div>
+                </label>
+            </div>
+
 
 
             <img id="cloud_1_4" src="cloud/cloud_PNG7.png" alt="">
@@ -219,7 +254,7 @@
             <div id="home">
                 <div class="about_me">
                     <h1 class="name">TAUGAMOA Malekalita</h1>
-                    <p id="presentation"> Moi c’est Malekalits, je vis a Dumbea sur mer, j’ai fait des études dans le
+                    <p id="presentation"> Moi c’est Malekalits, j'ai 23 ans et je vis a Dumbea sur mer, j’ai fait des études dans le
                         domaine du BTP puis, je me suis tournée vers l'informatique. Motivée et créative, j’aime toucher
                         à tout et enrichir mes connaissances.
 
@@ -239,25 +274,19 @@
         <img class="scroll_1" src="scroll/triangle_PNG118.png" alt="">
         <p class="txt_scroll_1">Scroll up,<br> to see more..</p>
         <!-- nav bar -->
-        <div class="menu">
-            <p id="welcome">Welcome</p>
-            <p id="parcours">Formations</p>
-            <p id="exp">Expériences</p>
-            <p id="competences">Competences</p>
-            <p id="prjs">Projets</p>
+        <div class="menu_1">
+            <p id="welcome">WELCOME</p>
+            <p id="parcours">PARCOURS</p>
+            <p id="competences">COMPETENCES</p>
         </div>
 
 
     </div>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <div class="certification">
+        <p>© 2020 – TAUGAMOA Malekalita</p>
+    </div>
     <script src="script.js"></script>
 
-    hello world
 </body>
 
 </html>
