--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 <body>
 
     <div id="particles-js"></div>
-    <img id="cloud_3" src="cloud/cloud_PNG4.png" alt="">
+
+    <div id="move-cloud-line-left" class="line-cloud_3">
+        <img id="cloud_3" src="cloud/cloud_PNG4.png" alt="">
+    </div>
+
     <div class="vl"></div>
 
     <div class="nav_main">
@@ -109,11 +113,11 @@
                 </label>
             </div>
 
-
-
             <img id="cloud_1_4" src="cloud/cloud_PNG7.png" alt="">
+
             <img id="cloud_2" src="cloud/cloud_PNG0.png" alt="">
-            <!-- DEVELOPPEUR WEB -->
+
+            <!--DEVELOPPEUR WEB -->
             <div id="formation_4">
                 <div class="text_6">
                     <h4 class="intitule"> CCI - Nouméa, Nouvelle-Calédonie</h4>
@@ -123,10 +127,15 @@
                 </div>
             </div>
 
+            <div id="move-cloud-line-left" class="line-cloud_1_1">
+                <img id="cloud_1_1" src="cloud/cloud_PNG0.png" alt="">
+            </div>
 
-            <img id="cloud_1_1" src="cloud/cloud_PNG0.png" alt="">
+            <div id="move-cloud-line-left" class="line-cloud_7">
+                <img id="cloud_7" src="cloud/cloud_PNG7.png" alt="">
+            </div>
 
-            <img id="cloud_7" src="cloud/cloud_PNG7.png" alt="">
+
             <!-- Dessinatrice projeteur -->
             <div id="experience_5">
                 <div class="info">
@@ -144,11 +153,14 @@
             </div>
 
             <!--Job d'ete + macdo + LPEC -->
-            <img id="cloud_1" src="cloud/cloud_PNG0.png" alt="">
+            <div id="move-cloud-line-left" class="line-cloud_1">
+                <img id="cloud_1" src="cloud/cloud_PNG0.png" alt="">
+            </div>
 
             <div id="row_1" class="row">
 
                 <img id="cloud_5" src="cloud/cloud_PNG19.png" alt="">
+
                 <article class="col-md-4">
 
                     <div id="formation_3">
@@ -236,9 +248,10 @@
                 </div>
             </div>
 
-            <img id="cloud_1_2" src="cloud/cloud_PNG28.png" alt="">
-
-            <!-- BAC STI2D -->
+            <div id="move-cloud-line-left" class="line-cloud_1_2">
+                <img id="cloud_1_2" src="cloud/cloud_PNG28.png" alt="">
+            </div>
+            <!--BAC STI2D -->
 
             <div id="formation_1">
                 <div class="text">
@@ -250,11 +263,13 @@
             <img id="cloud_6" src="cloud/cloud_PNG31.png" alt="">
 
             <img id="cloud_1_3" src="cloud/cloud_PNG7.png" alt="">
-            <!-- HOME PAGE -->
+
+            <!--HOME PAGE -->
             <div id="home">
                 <div class="about_me">
                     <h1 class="name">TAUGAMOA Malekalita</h1>
-                    <p id="presentation"> Moi c’est Malekalits, j'ai 23 ans et je vis a Dumbea sur mer, j’ai fait des études dans le
+                    <p id="presentation"> Moi c’est Malekalits, j'ai 23 ans et je vis a Dumbea sur mer, j’ai fait des
+                        études dans le
                         domaine du BTP puis, je me suis tournée vers l'informatique. Motivée et créative, j’aime toucher
                         à tout et enrichir mes connaissances.
 
@@ -270,9 +285,11 @@
 
 
         </div>
+        
 
         <img class="scroll_1" src="scroll/triangle_PNG118.png" alt="">
         <p class="txt_scroll_1">Scroll up,<br> to see more..</p>
+        
         <!-- nav bar -->
         <div class="menu_1">
             <p id="welcome">WELCOME</p>
