--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     <div class="nav_main">
         <div class="navBar">
             <nav class="coordonnees">
-                <a id="crdn" href="mailto:t.malekalita@gmail.com">Email </a>
-                <a id="phone" href="tel:+687863521">Phone</a>
+                <a id="crdn" href="mailto:t.malekalita@gmail.com">Email <i class="fas fa-at"></i> </a>
+                <a id="phone" href="tel:+687863521">Phone <i class="fas fa-phone"></i> </a>
                 <a id="lkd" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b" target="_blank">Linkedin
+                    <i class="fab fa-linkedin"></i> </a>
+                <a id="git" href="https://github.com/Maleka2729" target="_blank">Github <i class="fab fa-github"></i>
                 </a>
-                <a id="git" href="https://github.com/Maleka2729" target="_blank">Github</a>
             </nav>
         </div>
 
@@ -138,7 +139,7 @@
 
             <!-- Dessinatrice projeteur -->
             <div id="experience_5">
-                <div class="info">
+                <div class="info_5">
                     <div class="text_5">
                         <h4 class="place"> ASC BMS - Nouméa <br> Nouvelle-Calédonie</h4>
                         <h5 class="poste"> Dessinatrice projeteur</h5>
@@ -224,7 +225,7 @@
 
             <!-- BTS Batiment + stage GINGER LBTP -->
             <div class="formation_2">
-                <div class="info">
+                <div class="info_2">
                     <div id="bts_batiment">
                         <div class="text_1_1">
                             <h4 class="intitule"> BTS Bâtiment</h4>
@@ -262,13 +263,15 @@
             </div>
             <img id="cloud_6" src="cloud/cloud_PNG31.png" alt="">
 
-            <img id="cloud_1_3" src="cloud/cloud_PNG7.png" alt="">
+            <div id="move-cloud-line-left" class="line-cloud_1_3">
+                <img id="cloud_1_3" src="cloud/cloud_PNG7.png" alt="">
+            </div>
 
             <!--HOME PAGE -->
             <div id="home">
                 <div class="about_me">
                     <h1 class="name">TAUGAMOA Malekalita</h1>
-                    <p id="presentation"> Moi c’est Malekalits, j'ai 23 ans et je vis a Dumbea sur mer, j’ai fait des
+                    <p id="presentation"> Moi c’est Malekalita, j'ai 23 ans et je vis a Dumbea sur mer, j’ai fait des
                         études dans le
                         domaine du BTP puis, je me suis tournée vers l'informatique. Motivée et créative, j’aime toucher
                         à tout et enrichir mes connaissances.
@@ -285,11 +288,11 @@
 
 
         </div>
-        
+
 
         <img class="scroll_1" src="scroll/triangle_PNG118.png" alt="">
         <p class="txt_scroll_1">Scroll up,<br> to see more..</p>
-        
+
         <!-- nav bar -->
         <div class="menu_1">
             <p id="welcome">WELCOME</p>
