--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                     </div>
                 </label>
             </div>
-
-            <img id="cloud_1_4" src="cloud/cloud_PNG7.png" alt="">
+            <div id="move-cloud-line-left" class="line-cloud_1_4">
+                <img id="cloud_1_4" src="cloud/cloud_PNG7.png" alt="">
+            </div>
 
             <img id="cloud_2" src="cloud/cloud_PNG0.png" alt="">
 
@@ -263,9 +264,9 @@
             </div>
             <img id="cloud_6" src="cloud/cloud_PNG31.png" alt="">
 
-           
+            <div id="move-cloud-line-left" class="line-cloud_1_3">
                 <img id="cloud_1_3" src="cloud/cloud_PNG7.png" alt="">
-            
+            </div>
 
             <!--HOME PAGE -->
             <div id="home">
