--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
                     </div>
 
                     <div class="btn_1">
-                        <img src="icones/Autocad_23637.png" class="material-icons md-36">
+                        <img src="icones/Autocad_23637.png" class="material-icons md-36" title="Autocad">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/Revit_23612.png" class="material-icons md-36">
+                        <img src="icones/Revit_23612.png" class="material-icons md-36" title="Revit">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/rafagagooglesketchup_11285.png" class="material-icons md-36">
+                        <img src="icones/rafagagooglesketchup_11285.png" class="material-icons md-36" title="Sketchup">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/Office_2013_23572.png" class="material-icons md-36">
+                        <img src="icones/Office_2013_23572.png" class="material-icons md-36" title="Pack Office">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_css_icon_130661.png" class="material-icons md-36">
+                        <img src="icones/file_type_css_icon_130661.png" class="material-icons md-36" title="CSS">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_html_icon_130541.png" class="material-icons md-36">
+                        <img src="icones/file_type_html_icon_130541.png" class="material-icons md-36" title="HTML">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_js_official_icon_130509.png" class="material-icons md-36">
+                        <img src="icones/file_type_js_official_icon_130509.png" class="material-icons md-36" title="Javascript">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_python_icon_130221.png" class="material-icons md-36">
+                        <img src="icones/file_type_python_icon_130221.png" class="material-icons md-36" title="Python">
                     </div>
                 </label>
             </div>
