--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <i class="fab fa-linkedin"></i> </a>
                 <a id="git" href="https://github.com/Maleka2729" target="_blank">Github <i class="fab fa-github"></i>
                 </a>
+                <a id="cv" href="cv_lm/CV-TAUGAMOA.pdf" target="_blank">CV <i class="far fa-address-card"></i></a>
+                <a id="lm" href="cv_lm/Lettre de Motivation - TAUGAMOA Malekalita.pdf" target="_blank"> Lettre de
+                    motivation <i class="far fa-file-alt"></i></a>
             </nav>
         </div>
 
@@ -90,7 +93,8 @@
                         <img src="icones/file_type_html_icon_130541.png" class="material-icons md-36" title="HTML">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_js_official_icon_130509.png" class="material-icons md-36" title="Javascript">
+                        <img src="icones/file_type_js_official_icon_130509.png" class="material-icons md-36"
+                            title="Javascript">
                     </div>
                     <div class="btn_1">
                         <img src="icones/file_type_python_icon_130221.png" class="material-icons md-36" title="Python">
