--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
 
 <body>
+    <!-- pour le loader -->
+    <!-- <div class="showbox">
+        <div class="loader">
+            <svg class="circular" viewBox="25 25 50 50">
+                <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+            </svg>
+        </div>
+    </div> -->
 
     <div id="particles-js"></div>
 
@@ -40,29 +48,32 @@
 
     <div class="vl"></div>
 
-    <div class="nav_main">
-        <div class="navBar">
-            <nav class="coordonnees">
-                <a id="crdn" href="mailto:t.malekalita@gmail.com">Email <i class="fas fa-at"></i> </a>
-                <a id="phone" href="tel:+687863521">Phone <i class="fas fa-phone"></i> </a>
-                <a id="lkd" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b" target="_blank">Linkedin
-                    <i class="fab fa-linkedin"></i> </a>
-                <a id="git" href="https://github.com/Maleka2729" target="_blank">Github <i class="fab fa-github"></i>
-                </a>
-                <a id="cv" href="cv_lm/CV-TAUGAMOA.pdf" target="_blank">CV <i class="far fa-address-card"></i></a>
-                <a id="lm" href="cv_lm/Lettre de Motivation - TAUGAMOA Malekalita.pdf" target="_blank"> Lettre de
-                    motivation <i class="far fa-file-alt"></i></a>
-            </nav>
-        </div>
-
-        <div class="navigation">
-            <a href="#welcome" id="wlm"> Welcome</a>
-            <a href="#parcours" id="pcr">Parcours</a>
-            <a href="#competences" id="cpt">Competences</a>
-        </div>
-    </div>
-
     <div class="container-fluid">
+
+        <div class="nav_main">
+            <div class="navBar">
+                <nav class="coordonnees">
+                    <a id="crdn" href="mailto:t.malekalita@gmail.com">Email <i class="fas fa-at"></i> </a>
+                    <a id="phone" href="tel:+687863521">Phone <i class="fas fa-phone"></i> </a>
+                    <a id="lkd" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b"
+                        target="_blank">Linkedin
+                        <i class="fab fa-linkedin"></i> </a>
+                    <a id="git" href="https://github.com/Maleka2729" target="_blank">Github <i
+                            class="fab fa-github"></i>
+                    </a>
+                    <a id="cv" href="cv_lm/CV - TAUGAMOA Malekalita.pdf" target="_blank">CV <i class="far fa-address-card"></i></a>
+                    <a id="lm" href="cv_lm/Lettre de Motivation - TAUGAMOA Malekalita.pdf" target="_blank"> Lettre de
+                        motivation <i class="far fa-file-alt"></i></a>
+                </nav>
+            </div>
+
+            <div class="navigation">
+                <a href="#welcome" id="wlm"> Welcome</a>
+                <a href="#parcours" id="pcr">Parcours</a>
+                <a href="#competences" id="cpt">Competences</a>
+            </div>
+        </div>
+
         <div class="container">
 
             <div class="menu">
@@ -316,6 +327,7 @@
     <div class="certification">
         <p>© 2020 – TAUGAMOA Malekalita</p>
     </div>
+
     <script src="script.js"></script>
 
 </body>
