--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a id="git" href="https://github.com/Maleka2729" target="_blank">Github <i
                             class="fab fa-github"></i>
                     </a>
-                    <a id="cv" href="cv_lm/CV - TAUGAMOA Malekalita.pdf" target="_blank">CV <i class="far fa-address-card"></i></a>
+                    <a id="cv" href="cv_lm/CV-TAUGAMOA_Malekalita.pdf" target="_blank">CV <i class="far fa-address-card"></i></a>
                     <a id="lm" href="cv_lm/Lettre de Motivation - TAUGAMOA Malekalita.pdf" target="_blank"> Lettre de
                         motivation <i class="far fa-file-alt"></i></a>
                 </nav>
