--- a/index.html
+++ b/index.html
@@ -31,19 +31,12 @@
 
 
 <body>
-    <!-- pour le loader -->
-    <!-- <div class="showbox">
-        <div class="loader">
-            <svg class="circular" viewBox="25 25 50 50">
-                <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
-            </svg>
-        </div>
-    </div> -->
+    
 
     <div id="particles-js"></div>
 
     <div id="move-cloud-line-left" class="line-cloud_3">
-        <img id="cloud_3" src="cloud/cloud_PNG4.png" alt="">
+        <img id="cloud_3" src="cloud/cloud_PNG4.webp" alt="">
     </div>
 
     <div class="vl"></div>
@@ -79,35 +72,35 @@
                 <input type="checkbox" id="toggle" />
                 <label id="show-menu" for="toggle">
                     <div class="btn_1">
-                        <img src="icones/brain.png" class="material-icons md-36 toggleBtn menuBtn">
-                        <img src="icones/cancel_close_delete_exit_logout_remove_x_icon_123217.png"
+                        <img src="icones/brain.webp" class="material-icons md-36 toggleBtn menuBtn">
+                        <img src="icones/ete_exit_logout_remove_x_icon_123217.webp"
                             class="material-icons md-36 toggleBtn closeBtn">
                     </div>
 
                     <div class="btn_1">
-                        <img src="icones/Autocad_23637.png" class="material-icons md-36" title="Autocad">
+                        <img src="icones/Autocad_23637.webp" class="material-icons md-36" title="Autocad">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/Revit_23612.png" class="material-icons md-36" title="Revit">
+                        <img src="icones/Revit_23612.webp" class="material-icons md-36" title="Revit">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/rafagagooglesketchup_11285.png" class="material-icons md-36" title="Sketchup">
+                        <img src="icones/rafagagooglesketchup_11285.webp" class="material-icons md-36" title="Sketchup">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/Office_2013_23572.png" class="material-icons md-36" title="Pack Office">
+                        <img src="icones/Office_2013_23572.webp" class="material-icons md-36" title="Pack Office">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_css_icon_130661.png" class="material-icons md-36" title="CSS">
+                        <img src="icones/file_type_css_icon_130661.webp" class="material-icons md-36" title="CSS">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_html_icon_130541.png" class="material-icons md-36" title="HTML">
+                        <img src="icones/file_type_html_icon_130541.webp" class="material-icons md-36" title="HTML">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_js_official_icon_130509.png" class="material-icons md-36"
+                        <img src="icones/file_type_js_official_icon_130509.webp" class="material-icons md-36"
                             title="Javascript">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_python_icon_130221.png" class="material-icons md-36" title="Python">
+                        <img src="icones/file_type_python_icon_130221.webp" class="material-icons md-36" title="Python">
                     </div>
                 </label>
             </div>
@@ -116,31 +109,31 @@
                 <input type="checkbox" id="toggle_2" />
                 <label id="show-menu_2" for="toggle_2">
                     <div class="btn_2">
-                        <img src="icones/happy_smiley_icon-icons.com_49910.png"
+                        <img src="icones/happy_smiley_icon-icons.com_49910.webp"
                             class="material-icons md-36 toggleBtn menuBtn_2">
-                        <img src="icones/cancel_close_delete_exit_logout_remove_x_icon_123217.png"
+                        <img src="icones/ete_exit_logout_remove_x_icon_123217.webp"
                             class="material-icons md-36 toggleBtn closeBtn_2">
                     </div>
 
                     <div class="btn_2">
-                        <img src="icones/free-30-instagram-stories-icons03_122550.png" class="material-icons md-36">
+                        <img src="icones/-30-instagram-stories-icons03_122550.webp" class="material-icons md-36">
                     </div>
                     <div class="btn_2">
-                        <img src="icones/mp3musicplayer_114495.png" class="material-icons md-36">
+                        <img src="icones/mp3musicplayer_114495.webp" class="material-icons md-36">
                     </div>
                     <div class="btn_2">
-                        <img src="icones/pink_camera_icon-icons.com_56621.png" class="material-icons md-36">
+                        <img src="icones/pink_camera_icon-icons.com_56621.webp" class="material-icons md-36">
                     </div>
                     <div class="btn_2">
-                        <img src="icones/read_book_study_icon-icons.com_51077.png" class="material-icons md-36">
+                        <img src="icones/read_book_study_icon-icons.com_51077.webp" class="material-icons md-36">
                     </div>
                 </label>
             </div>
             <div id="move-cloud-line-left" class="line-cloud_1_4">
-                <img id="cloud_1_4" src="cloud/cloud_PNG7.png" alt="">
+                <img id="cloud_1_4" src="cloud/cloud_PNG7.webp" alt="">
             </div>
 
-            <img id="cloud_2" src="cloud/cloud_PNG0.png" alt="">
+            <img id="cloud_2" src="cloud/cloud_PNG0.webp" alt="">
 
             <!--DEVELOPPEUR WEB -->
             <div id="formation_4">
@@ -153,11 +146,11 @@
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_1_1">
-                <img id="cloud_1_1" src="cloud/cloud_PNG0.png" alt="">
+                <img id="cloud_1_1" src="cloud/cloud_PNG0.webp" alt="">
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_7">
-                <img id="cloud_7" src="cloud/cloud_PNG7.png" alt="">
+                <img id="cloud_7" src="cloud/cloud_PNG7.webp" alt="">
             </div>
 
 
@@ -179,12 +172,12 @@
 
             <!--Job d'ete + macdo + LPEC -->
             <div id="move-cloud-line-left" class="line-cloud_1">
-                <img id="cloud_1" src="cloud/cloud_PNG0.png" alt="">
+                <img id="cloud_1" src="cloud/cloud_PNG0.webp" alt="">
             </div>
 
             <div id="row_1" class="row">
 
-                <img id="cloud_5" src="cloud/cloud_PNG19.png" alt="">
+                <img id="cloud_5" src="cloud/cloud_PNG19.webp" alt="">
 
                 <article class="col-md-4">
 
@@ -274,7 +267,7 @@
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_1_2">
-                <img id="cloud_1_2" src="cloud/cloud_PNG28.png" alt="">
+                <img id="cloud_1_2" src="cloud/cloud_PNG28.webp" alt="">
             </div>
             <!--BAC STI2D -->
 
@@ -285,10 +278,10 @@
                     <h6 class="year">JANVIER 2014 - DECEMBRE 2014</h6>
                 </div>
             </div>
-            <img id="cloud_6" src="cloud/cloud_PNG31.png" alt="">
+            <img id="cloud_6" src="cloud/cloud_PNG31.webp" alt="">
 
             <div id="move-cloud-line-left" class="line-cloud_1_3">
-                <img id="cloud_1_3" src="cloud/cloud_PNG7.png" alt="">
+                <img id="cloud_1_3" src="cloud/cloud_PNG7.webp" alt="">
             </div>
 
             <!--HOME PAGE -->
@@ -305,14 +298,14 @@
 
                         <br> N’hésitez pas à me contacter !</p>
                 </div>
-                <img src="image/andrew-sit-Trrypz3imi4-unsplash.jpg" alt="">
+                <img src="image/andrew-sit-Trrypz3imi4-unsplash.webp" alt="">
 
             </div>
 
         </div>
 
 
-        <img class="scroll_1" src="scroll/triangle_PNG118.png" alt="">
+        <img class="scroll_1" src="scroll/triangle_PNG118.webp" alt="">
         <p class="txt_scroll_1">Scroll up,<br> to see more..</p>
 
         <!-- nav bar -->
