--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="particles-js"></div>
 
     <div id="move-cloud-line-left" class="line-cloud_3">
-        <img id="cloud_3" src="cloud/cloud_PNG4.webp" alt="">
+        <img id="cloud_3" src="cloud/cloud_PNG4.webp" alt="cloud">
     </div>
 
     <div class="vl"></div>
@@ -130,10 +130,10 @@
                 </label>
             </div>
             <div id="move-cloud-line-left" class="line-cloud_1_4">
-                <img id="cloud_1_4" src="cloud/cloud_PNG7.webp" alt="">
+                <img id="cloud_1_4" src="cloud/cloud_PNG7.webp" alt="cloud">
             </div>
 
-            <img id="cloud_2" src="cloud/cloud_PNG0.webp" alt="">
+            <img id="cloud_2" src="cloud/cloud_PNG0.webp" alt="cloud" class="lazyload">
 
             <!--DEVELOPPEUR WEB -->
             <div id="formation_4">
@@ -146,11 +146,11 @@
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_1_1">
-                <img id="cloud_1_1" src="cloud/cloud_PNG0.webp" alt="">
+                <img id="cloud_1_1" src="cloud/cloud_PNG0.webp" alt="cloud" class="lazyload">
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_7">
-                <img id="cloud_7" src="cloud/cloud_PNG7.webp" alt="">
+                <img id="cloud_7" src="cloud/cloud_PNG7.webp" alt="cloud">
             </div>
 
 
@@ -172,12 +172,12 @@
 
             <!--Job d'ete + macdo + LPEC -->
             <div id="move-cloud-line-left" class="line-cloud_1">
-                <img id="cloud_1" src="cloud/cloud_PNG0.webp" alt="">
+                <img id="cloud_1" src="cloud/cloud_PNG0.webp" alt="clouds" class="lazyload">
             </div>
 
             <div id="row_1" class="row">
 
-                <img id="cloud_5" src="cloud/cloud_PNG19.webp" alt="">
+                <img id="cloud_5" src="cloud/cloud_PNG19.webp" alt="clouds">
 
                 <article class="col-md-4">
 
@@ -267,7 +267,7 @@
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_1_2">
-                <img id="cloud_1_2" src="cloud/cloud_PNG28.webp" alt="">
+                <img id="cloud_1_2" src="cloud/cloud_PNG28.webp" alt="cloud">
             </div>
             <!--BAC STI2D -->
 
@@ -278,10 +278,10 @@
                     <h6 class="year">JANVIER 2014 - DECEMBRE 2014</h6>
                 </div>
             </div>
-            <img id="cloud_6" src="cloud/cloud_PNG31.webp" alt="">
+            <img id="cloud_6" src="cloud/cloud_PNG31.webp" alt="cloud">
 
             <div id="move-cloud-line-left" class="line-cloud_1_3">
-                <img id="cloud_1_3" src="cloud/cloud_PNG7.webp" alt="">
+                <img id="cloud_1_3" src="cloud/cloud_PNG7.webp" alt="cloud">
             </div>
 
             <!--HOME PAGE -->
@@ -298,14 +298,14 @@
 
                         <br> N’hésitez pas à me contacter !</p>
                 </div>
-                <img src="image/andrew-sit-Trrypz3imi4-unsplash.webp" alt="">
+                <img src="image/andrew-sit-Trrypz3imi4-unsplash.webp" alt="paysage">
 
             </div>
 
         </div>
 
 
-        <img class="scroll_1" src="scroll/triangle_PNG118.webp" alt="">
+        <img class="scroll_1" src="scroll/triangle_PNG118.webp" alt="triangle">
         <p class="txt_scroll_1">Scroll up,<br> to see more..</p>
 
         <!-- nav bar -->
@@ -321,6 +321,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="lazysizes.min.js" async></script>
 
 </body>
 
