--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
     <div id="particles-js"></div>
 
-    <div id="move-cloud-line-left" class="line-cloud_3">
+    <!-- <div id="move-cloud-line-left" class="line-cloud_3">
         <img id="cloud_3" src="cloud/cloud_PNG4.webp" alt="cloud">
-    </div>
+    </div> -->
 
     <div class="vl"></div>
 
@@ -133,7 +133,7 @@
                 <img id="cloud_1_4" src="cloud/cloud_PNG7.webp" alt="cloud">
             </div>
 
-            <img id="cloud_2" src="cloud/cloud_PNG0.webp" alt="cloud" class="lazyload">
+            <!-- <img id="cloud_2" src="cloud/cloud_PNG0.webp" alt="cloud" class="lazyload"> -->
 
             <!--DEVELOPPEUR WEB -->
             <div id="formation_4">
@@ -149,9 +149,9 @@
                 <img id="cloud_1_1" src="cloud/cloud_PNG0.webp" alt="cloud" class="lazyload">
             </div>
 
-            <div id="move-cloud-line-left" class="line-cloud_7">
-                <img id="cloud_7" src="cloud/cloud_PNG7.webp" alt="cloud">
-            </div>
+            <!-- <div id="move-cloud-line-left" class="line-cloud_7">
+                 <img id="cloud_7" src="cloud/cloud_PNG7.webp" alt="cloud"> 
+            </div> -->
 
 
             <!-- Dessinatrice projeteur -->
@@ -171,13 +171,13 @@
             </div>
 
             <!--Job d'ete + macdo + LPEC -->
-            <div id="move-cloud-line-left" class="line-cloud_1">
-                <img id="cloud_1" src="cloud/cloud_PNG0.webp" alt="clouds" class="lazyload">
-            </div>
+            <!-- <div id="move-cloud-line-left" class="line-cloud_1">
+                <img id="cloud_1" src="cloud/cloud_PNG0.webp" alt="clouds" class="lazyload"> 
+            </div> -->
 
             <div id="row_1" class="row">
 
-                <img id="cloud_5" src="cloud/cloud_PNG19.webp" alt="clouds">
+                <!-- <img id="cloud_5" src="cloud/cloud_PNG19.webp" alt="clouds"> -->
 
                 <article class="col-md-4">
 
@@ -278,7 +278,7 @@
                     <h6 class="year">JANVIER 2014 - DECEMBRE 2014</h6>
                 </div>
             </div>
-            <img id="cloud_6" src="cloud/cloud_PNG31.webp" alt="cloud">
+            <!-- <img id="cloud_6" src="cloud/cloud_PNG31.webp" alt="cloud"> -->
 
             <div id="move-cloud-line-left" class="line-cloud_1_3">
                 <img id="cloud_1_3" src="cloud/cloud_PNG7.webp" alt="cloud">
