--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <body>
-    
+
 
     <div id="particles-js"></div>
 
@@ -46,16 +46,17 @@
         <div class="nav_main">
             <div class="navBar">
                 <nav class="coordonnees">
-                    <a id="crdn" href="mailto:t.malekalita@gmail.com">Email <i class="fas fa-at"></i> </a>
-                    <a id="phone" href="tel:+687863521">Phone <i class="fas fa-phone"></i> </a>
-                    <a id="lkd" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b"
-                        target="_blank">Linkedin
-                        <i class="fab fa-linkedin"></i> </a>
-                    <a id="git" href="https://github.com/Maleka2729" target="_blank">Github <i
-                            class="fab fa-github"></i>
+                    <a id="crdn" href="mailto:t.malekalita@gmail.com"> <i class="fas fa-at"></i> Email</a>
+                    <a id="phone" href="tel:+687863521"> <i class="fas fa-phone"></i> Phone </a>
+                    <a id="lkd" href="https://www.linkedin.com/in/malekalita-taugamoa-8b100514b" target="_blank"
+                        rel="noopener">
+                        <i class="fab fa-linkedin"></i> Linkedin</a>
+                    <a id="git" href="https://github.com/Maleka2729" target="_blank" rel="noopener"> <i
+                            class="fab fa-github"></i> Github
                     </a>
-                    <a id="cv" href="cv_lm/CV-TAUGAMOA_Malekalita.pdf" target="_blank">CV <i class="far fa-address-card"></i></a>
-                    
+                    <a id="cv" href="cv_lm/CV-TAUGAMOA_Malekalita.pdf" target="_blank"> <i
+                            class="far fa-address-card"></i> CV </a>
+
                 </nav>
             </div>
 
@@ -72,35 +73,40 @@
                 <input type="checkbox" id="toggle" />
                 <label id="show-menu" for="toggle">
                     <div class="btn_1">
-                        <img src="icones/brain.webp" class="material-icons md-36 toggleBtn menuBtn">
-                        <img src="icones/ete_exit_logout_remove_x_icon_123217.webp"
+                        <img src="icones/brain.webp" alt="brain" class="material-icons md-36 toggleBtn menuBtn">
+                        <img src="icones/ete_exit_logout_remove_x_icon_123217.webp" alt="exit"
                             class="material-icons md-36 toggleBtn closeBtn">
                     </div>
 
                     <div class="btn_1">
-                        <img src="icones/Autocad_23637.webp" class="material-icons md-36" title="Autocad">
+                        <img src="icones/Autocad_23637.webp" alt="autocad" class="material-icons md-36" title="Autocad">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/Revit_23612.webp" class="material-icons md-36" title="Revit">
+                        <img src="icones/Revit_23612.webp" alt="revit" class="material-icons md-36" title="Revit">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/rafagagooglesketchup_11285.webp" class="material-icons md-36" title="Sketchup">
+                        <img src="icones/rafagagooglesketchup_11285.webp" alt="sketchup" class="material-icons md-36"
+                            title="Sketchup">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/Office_2013_23572.webp" class="material-icons md-36" title="Pack Office">
+                        <img src="icones/Office_2013_23572.webp" alt="pack_office" class="material-icons md-36"
+                            title="Pack Office">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_css_icon_130661.webp" class="material-icons md-36" title="CSS">
+                        <img src="icones/file_type_css_icon_130661.webp" alt="css" class="material-icons md-36"
+                            title="CSS">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_html_icon_130541.webp" class="material-icons md-36" title="HTML">
+                        <img src="icones/file_type_html_icon_130541.webp" alt="html" class="material-icons md-36"
+                            title="HTML">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_js_official_icon_130509.webp" class="material-icons md-36"
+                        <img src="icones/file_type_js_official_icon_130509.webp" alt="js" class="material-icons md-36"
                             title="Javascript">
                     </div>
                     <div class="btn_1">
-                        <img src="icones/file_type_python_icon_130221.webp" class="material-icons md-36" title="Python">
+                        <img src="icones/file_type_python_icon_130221.webp" alt="python" class="material-icons md-36"
+                            title="Python">
                     </div>
                 </label>
             </div>
@@ -109,23 +115,26 @@
                 <input type="checkbox" id="toggle_2" />
                 <label id="show-menu_2" for="toggle_2">
                     <div class="btn_2">
-                        <img src="icones/happy_smiley_icon-icons.com_49910.webp"
+                        <img src="icones/happy_smiley_icon-icons.com_49910.webp" alt="smile"
                             class="material-icons md-36 toggleBtn menuBtn_2">
-                        <img src="icones/ete_exit_logout_remove_x_icon_123217.webp"
+                        <img src="icones/ete_exit_logout_remove_x_icon_123217.webp" alt="exit"
                             class="material-icons md-36 toggleBtn closeBtn_2">
                     </div>
 
                     <div class="btn_2">
-                        <img src="icones/-30-instagram-stories-icons03_122550.webp" class="material-icons md-36">
+                        <img src="icones/-30-instagram-stories-icons03_122550.webp" alt="plane"
+                            class="material-icons md-36">
                     </div>
                     <div class="btn_2">
-                        <img src="icones/mp3musicplayer_114495.webp" class="material-icons md-36">
+                        <img src="icones/mp3musicplayer_114495.webp" alt="mp3" class="material-icons md-36">
                     </div>
                     <div class="btn_2">
-                        <img src="icones/pink_camera_icon-icons.com_56621.webp" class="material-icons md-36">
+                        <img src="icones/pink_camera_icon-icons.com_56621.webp" alt="camera"
+                            class="material-icons md-36">
                     </div>
                     <div class="btn_2">
-                        <img src="icones/read_book_study_icon-icons.com_51077.webp" class="material-icons md-36">
+                        <img src="icones/read_book_study_icon-icons.com_51077.webp" alt="book"
+                            class="material-icons md-36">
                     </div>
                 </label>
             </div>
@@ -145,7 +154,7 @@
             </div>
 
             <div id="move-cloud-line-left" class="line-cloud_1_1">
-                <img id="cloud_1_1" src="cloud/cloud_PNG0.webp" alt="cloud" class="lazyload">
+                <img id="cloud_1_1" src="cloud/cloud_PNG19.webp" alt="cloud" class="lazyload">
             </div>
 
             <!-- <div id="move-cloud-line-left" class="line-cloud_7">
@@ -316,7 +325,7 @@
     </div>
 
     <script src="script.js"></script>
-  
+
 
 </body>
 
